# extranuts-macos

./: AGENT_ASSETS_BRIEF.md  AGENT_DOCS_BRIEF.md  AGENT_PRINCIPAL_BRIEF.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  DAVE_DEBUG_REPORT.md  EDITOR_ENHANCEMENTS.md  INCIDENT_REPORT_002.md  PRD.md  PROJECT_STATUS.md  RAPPORT_TEST_THEME.md  README.md  TODO.md  WORK_COMPLETED.md  architecture-reference.html  check-notes.js  color-palettes.html  contrast-urgent-fix.md  font-size-reference.html  icon-browser.html  index.html  layout-map.html  package-lock.json  package.json  simple-icons.html  tailwind.config.js  test-double-click.md  test-notes.html  test-notes.md  test-selector-persistence.md  tsconfig.json  vite.config.ts
src/: App.tsx  (+8 more)
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: MODULE_ARCHITECTURE.md  lib.rs  main.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/_old_backup/: database.rs  models.rs  preferences.rs
src-tauri/src/core/: error.rs  mod.rs  state.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/categories/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/features/export/: commands.rs  file_access.json  mod.rs  obsidian.rs
src-tauri/src/features/notes/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/features/preferences/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/features/selectors/: commands.rs  mod.rs  models.rs  repository.rs
src-tauri/src/features/sync/: commands.rs  mod.rs  models.rs  service.rs
(+95 files in other folders)
