[package]
name = "extranuts-macos"
version = "0.1.0"
description = "A native macOS note-taking app"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "extranuts_macos"
crate-type = ["cdylib", "rlib"]